# af-pr-gitlab

./: .gitignore  .gitlab-ci.yml  Dockerfile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.claude/: README.md
.claude/steps/001-gitlab-adapter-scaffold/: EXECUTION_SUMMARY.md  PLAN.md
.claude/steps/002-dockerfile-claude-code-and-anthropic-routing/: EXECUTION_SUMMARY.md  PLAN.md
docker/: entrypoint_wrapper.py
scripts/: ci_runner.py  wait_for_health.sh
src/pr_af_gitlab/: config.py
src/pr_af_gitlab/gitlab/: client.py
src/pr_af_gitlab/schemas/: input.py  output.py
templates/: pr-af-review.gitlab-ci.yml
tests/: test_ci_runner.py  test_gitlab_client.py  test_position_mapping.py
