[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pr-af-gitlab"
version = "0.1.0"
description = "GitLab adapter for PR-AF (Agent-Field/pr-af) — reuses the upstream review pipeline unchanged, adds a GitLab MR discussion layer"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Jeff Jochems" }]
dependencies = [
    # Pinned to the exact upstream commit this adapter was built against.
    # Used ONLY to import pr_af.schemas.output's Pydantic models (ScoredFinding,
    # GitHubReview, GitHubComment, ReviewResult) for typed parsing of the JSON the
    # AgentField control plane returns. orchestrator.py, app.py, and github/client.py
    # from this dependency are never imported — pr-af's own container runs those
    # unmodified. Bump PR_AF_PINNED_REF (see README) and this line together.
    "pr-af @ git+https://github.com/Agent-Field/pr-af.git@6b82efc8ade7cd48420ecd6de59eeb1cb80d3b49",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pr_af_gitlab"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
